[package]
name = "typestate-bitcoin-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
bitcoin = "0.32.2"
bytes = "1.6.0"
eyre = "0.6.12"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
